# memento

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-package.yaml
docs/: Makefile  changelog.rst  conf.py  index.rst  plugins.rst  requirements.txt  serialization.rst
example/: Citibike.ipynb  Demo.ipynb
tests/: __init__.py  conftest.py  test_call_stack.py  test_code_hash.py  test_configuration.py  test_context.py  test_dependency_graph.py  test_exception.py  test_external.py  test_memento_function.py  test_metadata.py  test_partition.py  test_reference.py  test_resource.py  test_runner_backend.py  test_runner_local.py  test_runner_null.py  test_serialization.py  test_storage_backend.py  test_storage_base.py  test_storage_filesystem.py  test_storage_memory.py  test_storage_null.py
twosigma/memento/: __about__.py  __init__.py  base.py  call_stack.py  code_hash.py  configuration.py  context.py  dependency_graph.py  exception.py  external.py  logging.py  memento.py  metadata.py  partition.py  reference.py  resource.py  resource_function.py  result.py  runner.py  runner_local.py  runner_null.py  runner_test.py  serialization.py  storage.py  storage_base.py  storage_filesystem.py  storage_memory.py  storage_null.py  types.py
