[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twosigma_memento"
description = "Two Sigma Memento Core"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Mark Roth", email = "mark.roth@twosigma.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pytz>=2020.1",
  "graphviz>=0.13",
  "pandas>=1.0.5",
  "numpy>=1.15.4",
  "jinja2>=2.10",
  "python-dateutil>=2.8",
  "pyyaml>=3.13",
  "tqdm>=4.31.1"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/twosigma/memento#readme"
Issues = "https://github.com/twosigma/memento/issues"
Source = "https://github.com/twosigma/memento"

[tool.hatch.build.targets.wheel]
packages = ["twosigma/memento"]

[tool.hatch.version]
path = "twosigma/memento/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=twosigma.memento --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "memento/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow",
  "needs_canonical_version: marks tests as needing to run with a specific version of python, for hash stability"
]